@@ -863,10 +863,12 @@ class CMacrosResolverGeneral {
 		$user_macro_parser = new CUserMacroParser();
 
 		do {
+			$hostids = array_keys($hostids);
+
 			$db_host_macros = DBselect(
 				'SELECT hm.hostid,hm.macro,hm.value'.
 				' FROM hostmacro hm'.
-				' WHERE '.dbConditionInt('hm.hostid', array_keys($hostids))
+				' WHERE '.dbConditionInt('hm.hostid', $hostids)
 			);
 			while ($db_host_macro = DBfetch($db_host_macros)) {
 				if ($user_macro_parser->parse($db_host_macro['macro']) != CParser::PARSE_SUCCESS) {
@@ -875,7 +877,14 @@ class CMacrosResolverGeneral {
 
 				$macro = $user_macro_parser->getMacro();
 				$context = $user_macro_parser->getContext();
-				$host_macros[$db_host_macro['hostid']][$macro] = ['value' => null, 'contexts' => []];
+
+				if (!array_key_exists($db_host_macro['hostid'], $host_macros)) {
+					$host_macros[$db_host_macro['hostid']] = [];
+				}
+
+				if (!array_key_exists($macro, $host_macros[$db_host_macro['hostid']])) {
+					$host_macros[$db_host_macro['hostid']][$macro] = ['value' => null, 'contexts' => []];
+				}
 
 				if ($context === null) {
 					$host_macros[$db_host_macro['hostid']][$macro]['value'] = $db_host_macro['value'];
@@ -885,39 +894,31 @@ class CMacrosResolverGeneral {
 				}
 			}
 
+			foreach ($hostids as $hostid) {
+				$host_templates[$hostid] = [];
+			}
+
 			$templateids = [];
 			$db_host_templates = DBselect(
 				'SELECT ht.hostid,ht.templateid'.
 				' FROM hosts_templates ht'.
-				' WHERE '.dbConditionInt('ht.hostid', array_keys($hostids))
+				' WHERE '.dbConditionInt('ht.hostid', $hostids)
 			);
 			while ($db_host_template = DBfetch($db_host_templates)) {
 				$host_templates[$db_host_template['hostid']][] = $db_host_template['templateid'];
 				$templateids[$db_host_template['templateid']] = true;
-
-				if (!array_key_exists($db_host_template['hostid'], $host_macros)) {
-					$host_macros[$db_host_template['hostid']] = [];
-				}
-			}
-
-			foreach ($hostids as $key => $value) {
-				if (!array_key_exists($key, $host_templates)) {
-					$host_templates[$key] = [];
-				}
 			}
 
 			// only unprocessed templates will be populated
 			$hostids = [];
-			foreach ($templateids as $key => $value) {
-				if (!array_key_exists($key, $host_templates)) {
-					$hostids[$key] = true;
+			foreach (array_keys($templateids) as $templateid) {
+				if (!array_key_exists($templateid, $host_templates)) {
+					$hostids[$templateid] = true;
 				}
 			}
 		} while ($hostids);
 
 		$all_macros_resolved = true;
-
-		$user_macro_parser = new CUserMacroParser();
 
 		foreach ($data as &$element) {
 			$hostids = [];
